--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.2",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
     "node-sass": "^7.0.1",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
@@ -19,6 +21,7 @@
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
