--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.1.2",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
+    "date-fns": "^2.29.3",
     "node-sass": "^7.0.1",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
