--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
     "date-fns": "^2.29.3",
-    "node-sass": "^7.0.1",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -48,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.56.1"
   }
 }
